# ChangeLog for dev-java/xdoclet
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/xdoclet/ChangeLog,v 1.6 2004/07/23 05:57:29 mkennedy Exp $

*xdoclet-1.2.1 (23 Jul 2004)

  23 Jul 2004; <mkennedy@gentoo.org> metadata.xml, +xdoclet-1.2.1.ebuild:
  New upstream version.

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> xdoclet-1.2.0_beta1.ebuild:
  Fix use invocation

  15 Aug 2003; Adrian Almenar <strider@gentoo.org> xdoclet-1.2.0_beta1.ebuild:
  Fixes bug 21887, That makes the ebuild to build with jikes java compiler,
  Thanks to Jonas Berlin <jberlin@cc.hut.fi> for the patch.

*xdoclet-1.2.0_beta1 (20 Dec 2002)

  20 Dec 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  xdoclet-1.2.0_beta1.ebuild, files/digest-xdoclet-1.2.0_beta1 :

  Initial import.
