@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xdoclet/Attic/xdoclet-1.2.1.ebuild,v 1.1 2004/07/23 05:57:29 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xdoclet/Attic/xdoclet-1.2.1.ebuild,v 1.2 2004/07/23 16:56:03 mkennedy Exp $
 
 XJAVADOC_PV=1.0.3
 
@@ -41,7 +41,10 @@ src_compile() {
 	# http://bugs.gentoo.org/ which allows Maven to work without
 	# downloading sundry JARs from the Internet.
 
-	ant -Domit.maven=true -Domit.docs=true -Dmaven.command=true || die
+	ANT_OPT=-Xmx128m ant \
+		-Domit.maven=true \
+		-Domit.docs=true \
+		-Dmaven.command=true || die
 }
 
 src_install() {
