@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xdoclet
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xdoclet/ChangeLog,v 1.6 2004/07/23 05:57:29 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xdoclet/ChangeLog,v 1.7 2004/07/23 16:56:03 mkennedy Exp $
+
+  23 Jul 2004; <mkennedy@gentoo.org> xdoclet-1.2.1.ebuild:
+  Set ANT_OPT=-Xmx128m resolves Bug #52249
 
 *xdoclet-1.2.1 (23 Jul 2004)
 
